# matchkit

./: BACKLOG.md  Cargo.toml  INTERNAL_SPEC.md  README.md
benches/: batch_bench.rs
src/: error.rs  lib.rs  match_set.rs  match_type.rs
tests/: campaign_s_perf_match.rs  campaign_s_proptest_03.proptest-regressions  campaign_s_proptest_03.rs
tests/adversarial/: mod.rs
tests/regression/: mod.rs
tests/unit/: all.rs  depth.rs  test_matchkit.rs
